ci: skip SWA Oryx build for static root site

--- a/.github/workflows/azure-static-web-apps.yml
+++ b/.github/workflows/azure-static-web-apps.yml
@@ -30,3 +30,5 @@ jobs:
           app_location: "/"
           api_location: ""
           app_artifact_location: "/"
+          # Skip the Oryx build step because this is a plain static site (no build script)
+          skip_app_build: true
